@@ -463,6 +463,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #8828: Add new function os.replace(), for cross-platform renaming
+  with overwriting.
+
 - Issue #13848: open() and the FileIO constructor now check for NUL
   characters in the file name.  Patch by Hynek Schlawack.
 
